# Discord-Audio-bot-deprecated

./: README.md  audio.py  bot.py  config.py  pyproject.toml
